<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wolfyscript</groupId>
    <artifactId>wolfyutilities</artifactId>
    <version>1.6.2.14</version>
    <properties>
        <!-- Generic properties -->
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <!--
        WolfyScript private repo
        This repository requires you to have credentials to access private plugins like Oraxen and ItemsAdder.

        You can use the public repo and then provide your local installed Oraxen and ItemsAdder jars.
        Public repo: https://maven.wolfyscript.com/repository/public/
        -->
        <repository>
            <id>wolfyscript-private</id>
            <url>https://maven.wolfyscript.com/repository/private/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.11.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.3-R0.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>1.5.21</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>5.0.0.Alpha2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>19.0.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>de.iani.cubeside</groupId>
            <artifactId>LWC</artifactId>
            <version>5.0.16-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.1-SNAPSHOT</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- PlotSquared Bukkit API-->
        <dependency>
            <groupId>com.plotsquared</groupId>
            <artifactId>PlotSquared-Core</artifactId>
            <version>5.13.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.plotsquared</groupId>
            <artifactId>PlotSquared-Bukkit</artifactId>
            <version>5.13.3</version>
            <scope>compile</scope>
        </dependency>

        <!-- Some plugins that wu implements -->
        <dependency>
            <groupId>com.gmail.nossr50.mcMMO</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.1.139-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.lumine.xikage</groupId>
            <artifactId>mythicmobs</artifactId>
            <version>4.10.1</version>
        </dependency>

        <!--Dependencies from private repo! They require credentials to access!-->
        <dependency>
            <groupId>io.th0rgal</groupId>
            <artifactId>oraxen</artifactId>
            <version>1.40.0</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>dev.lone</groupId>
            <artifactId>itemsadder</artifactId>
            <version>2.1.5</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <filtering>true
                </filtering> <!-- this replaces, filters, all placeholders in the resources folder (such as ${project.version} in plugin.yml) -->
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <proc>none</proc>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>me.wolfyscript.utilities.main.metrics</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.fasterxml.jackson</pattern>
                            <shadedPattern>me.wolfyscript.utilities.libraries.com.fasterxml.jackson</shadedPattern>
                        </relocation>
                    </relocations>
                    <shadeSourcesContent>true</shadeSourcesContent>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <includes>
                                    <include>org.bstats</include>
                                    <include>com.fasterxml.jackson.core</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>wolfyscript-private</id>
            <name>Releases</name>
            <url>https://maven.wolfyscript.com/repository/releases/</url>
        </repository>
        <snapshotRepository>
            <id>wolfyscript-private</id>
            <name>Snapshot</name>
            <url>https://maven.wolfyscript.com/repository/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>